# vjf

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
notebook/: .gitattributes  lorenz_216_1500_10_200_gaussian_s0.npz  tutorial.ipynb
script/: driven.py  example.py
test/: test_functions.py  test_model.py  test_module.py  test_operation.py  test_rbf.py  test_sgp.py
vjf/: __init__.py  autonomous.py  base.py  decoder.py  distribution.py  distributions.py  driven.py  dynamics.py  functional.py  functions.py  glm.py  kalman.py  likelihood.py  metric.py  model.py  module.py  numerical.py  observation.py  offline.py  online.py  recognition.py  regression.py  trainer.py  util.py
vjf/gp/: __init__.py  base.py  covfun.py  operation.py  sgp.py
