[tool.poetry]
name = "vjf"
version = "2021.8.4"
description = "Variational Joint Filtering"
authors = ["yuan <yuanz271@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
torch = ">=1.9.0"
scipy = ">=1.7.0"
numpy = ">=1.21.0"
tqdm = ">=4.61.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
matplotlib = "^3.4.2"
scikit-learn = "^1.0.1"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
